Collapse into placeholder state, fix drag+zoom issue

--- a/style/extension.scss
+++ b/style/extension.scss
@@ -29,7 +29,10 @@
     background-color: white;
     border: 1px solid rgba(0, 0, 0, 0.25);
     border-radius: 3px;
-    zoom: 85%;
+
+    .app-content {
+      zoom: 85%;
+    }
 
     .spacer {
       flex-grow: 1;
@@ -47,6 +50,7 @@
       flex-direction: row;
       width: 16em;
       height: 2.5em;
+      background-color: white;
 
       .word-box-container {
         padding: 0.2em;
